# RqRouteDemo

./: CMakeLists.txt  NOTICE  README.txt
gui/: demo-example.desktop  demo_gui.py  load_monitor.py
receiver/: CMakeLists.txt  codeblockstate.c  codeblockstate.h  mk_seg_recv.sh  receiver.c  segment_list.c  segment_list.h  segstate.c  segstate.h  segstateset.c  segstateset.h
segmenter/: clean.sh  find_max_bitrate.sh  segment.sh
sender/: CMakeLists.txt  cli.c  cli.h  sender.c  udp.c  udp.h
test/: CMakeLists.txt
test/dummy_recv/: CMakeLists.txt  dummy_recv.c
utils/: CMakeLists.txt  fd_ops.c  fd_ops.h  m3u8.c  m3u8.h  packet_header.h  param_deriv.c  param_deriv.h  rq_memblocks.c  rq_memblocks.h  timeutil.c  timeutil.h
